--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -124,9 +124,9 @@
                     Subheader
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                    reiciendis nesciunt numquam.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                    necessitatibus reiciendis nesciunt numquam.
                 </p>
                 <button>
                     Learn More
@@ -135,9 +135,9 @@
                     Subheader
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                    reiciendis nesciunt numquam. 
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                    necessitatibus reiciendis nesciunt numquam. 
                 </p>
                 <button>
                     Learn More
@@ -148,9 +148,9 @@
                     Subheader
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                    reiciendis nesciunt numquam.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                    necessitatibus reiciendis nesciunt numquam.
                 </p>
                 <button>
                     Learn More
@@ -159,9 +159,9 @@
                     Subheader
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto nostrum
-                    autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque necessitatibus
-                    reiciendis nesciunt numquam. 
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                    necessitatibus reiciendis nesciunt numquam. 
                 </p>
                 <button>
                     Learn More
@@ -196,7 +196,7 @@
                             Marketing
                         </option>
                     </select>
-                    <textarea name="write-us" id="write-us" cols="30" rows="10">Write us a message...</textarea>
+                    <textarea cols="30" rows="10" placeholder="Write us a message"></textarea>
                 </form>
                 <button>
                     Send message
@@ -261,23 +261,23 @@
                     </li>
                 </ol>
             </section>
-            <footer>
-                <a href="http://www.twitter.com" target="blank">
-                    <img src="assets/icons/twitter-brands.svg" alt="twitter icon" height="25px" width="25px">
-                </a>
-                <a href="http://www.linkedin.com" target="blank">
-                    <img src="assets/icons/linkedin-brands.svg" alt="linkedin icon" height="25px" width="25px">
-                </a>
-                <a href="http://www.github.com" target="blank">
-                    <img src="assets/icons/github-brands.svg" alt="github icon" height="25px" width="25px">
-                </a>
-                <a href="http://www.instagram.com" target="blank">
-                    <img src="assets/icons/instagram-brands.svg" alt="instagram-logo" height="25px" width="25px">
-                </a>
-                <a href="http://www.facebook.com" target="blank">
-                    <img src="assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
-                </a>
-            </footer>
         </main>
+        <footer>
+            <a href="http://www.twitter.com" target="blank">
+                <img src="assets/icons/twitter-brands.svg" alt="twitter icon" height="25px" width="25px">
+            </a>
+            <a href="http://www.linkedin.com" target="blank">
+                <img src="assets/icons/linkedin-brands.svg" alt="linkedin icon" height="25px" width="25px">
+            </a>
+            <a href="http://www.github.com" target="blank">
+                <img src="assets/icons/github-brands.svg" alt="github icon" height="25px" width="25px">
+            </a>
+            <a href="http://www.instagram.com" target="blank">
+                <img src="assets/icons/instagram-brands.svg" alt="instagram-logo" height="25px" width="25px">
+            </a>
+            <a href="http://www.facebook.com" target="blank">
+                <img src="assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
+            </a>
+        </footer>
     </body>
 </html>
