finished reviewing the format, added readme file

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -69,8 +69,8 @@
                     pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
                     voluptates ratione. Modi, aut nobis?
                 </p>
-                <img src="assets/img/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg" alt="office">
-                <img src="assets/img/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="software">
+                <img src="assets/img/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg" alt="Office area">
+                <img src="assets/img/austin-distel-wD1LRb9OeEo-unsplash.jpg" alt="Work team reunion">
                 <h2>
                     Our History
                 </h2>
@@ -119,7 +119,7 @@
                     Why Trackgenix?
                 </h2>
                 <hr>
-                <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="office">
+                <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Work team reunion">
                 <h3>
                     Subheader
                 </h3>
@@ -142,8 +142,8 @@
                 <button>
                     Learn More
                 </button>
-                <img src="assets/img/headway-5QgIuuBxKwM-unsplash.jpg" alt="office">
-                <img src="assets/img/israel-andrade-YI_9SivVt_s-unsplash.jpg" alt="office">
+                <img src="assets/img/headway-5QgIuuBxKwM-unsplash.jpg" alt="meeting">
+                <img src="assets/img/israel-andrade-YI_9SivVt_s-unsplash.jpg" alt="Our office working area">
                 <h3>
                     Subheader
                 </h3>
@@ -166,14 +166,14 @@
                 <button>
                     Learn More
                 </button>
-                <img src="assets/img/thisisengineering-raeng-64YrPKiguAE-unsplash.jpg" alt="office">
+                <img src="assets/img/thisisengineering-raeng-64YrPKiguAE-unsplash.jpg" alt="Our software in display">
             </section>
             <section id="contact-us">
                 <h2>
                     Contact Us
                 </h2>
                 <hr>
-                <form action="">
+                <form>
                     <label for="name">
                         Name
                     </label>
@@ -186,7 +186,7 @@
                         Contact area:
                     </label>
                     <select name="area" id="area">
-                        <option value="rrhh">
+                        <option value="hr">
                             Human resources
                         </option>
                         <option value="development">
@@ -196,7 +196,7 @@
                             Marketing
                         </option>
                     </select>
-                    <textarea cols="30" rows="10" placeholder="Write us a message"></textarea>
+                    <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
                 </form>
                 <button>
                     Send message
@@ -206,12 +206,12 @@
                 </button>
             </section>
             <section>
-                <h2>
-                    Trackgenix
-                </h2>
                 <h3>
-                     Products
+                    Trackgenix
                 </h3>
+                <h4>
+                     Products
+                </h4>
                 <ol>
                     <li>
                         Features
@@ -226,9 +226,9 @@
                         Extras
                     </li>
                 </ol>
-                <h3>
+                <h4>
                     Company
-                </h3>
+                </h4>
                 <ol>
                     <li>
                         About us
@@ -243,9 +243,9 @@
                         Blog
                     </li>
                 </ol>
-                <h3>
+                <h4>
                     Support
-                </h3>
+                </h4>
                 <ol>
                     <li>
                         Help
