BaSP-2022: added style for contact-us section

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -220,17 +220,20 @@
                     </label>
                     <input type="email" placeholder="Insert your email">
                     <label for="contactarea">
-                        Contact area:
+                        Category:
                     </label>
                     <select name="area" id="area">
+                        <option value="qa">
+                            Quality Assurance
+                        </option>
+                        <option value="developer">
+                            Developer
+                        </option>
+                        <option value="pm">
+                            Project Manager
+                        </option>
                         <option value="hr">
-                            Human resources
-                        </option>
-                        <option value="development">
-                            Development
-                        </option>
-                        <option value="marketing">
-                            Marketing
+                            Human Resources
                         </option>
                     </select>
                     <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
