BaSP-2022: footer and ordered list section

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -245,61 +245,67 @@
                     Reset
                 </button>
             </section>
-            <section>
+            <section class="ordered-lists">
                 <h3>
                     Trackgenix
                 </h3>
-                <h4>
-                     Products
-                </h4>
-                <ol>
-                    <li>
-                        Features
-                    </li>
-                    <li>
-                        Downloads
-                    </li>
-                    <li>
-                        Integrations
-                    </li>
-                    <li>
-                        Extras
-                    </li>
-                </ol>
-                <h4>
-                    Company
-                </h4>
-                <ol>
-                    <li>
-                        About us
-                    </li>
-                    <li>
-                        Clients
-                    </li>
-                    <li>
-                        Resources
-                    </li>
-                    <li>
-                        Blog
-                    </li>
-                </ol>
-                <h4>
-                    Support
-                </h4>
-                <ol>
-                    <li>
-                        Help
-                    </li>
-                    <li>
-                        Tutorials
-                    </li>
-                    <li>
-                        API
-                    </li>
-                    <li>
-                        Contact
-                    </li>
-                </ol>
+                <div class="products">
+                    <h4>
+                        Products
+                    </h4>
+                    <ol>
+                        <li>
+                            Features
+                        </li>
+                        <li>
+                            Downloads
+                        </li>
+                        <li>
+                            Integrations
+                        </li>
+                        <li>
+                            Extras
+                        </li>
+                    </ol>
+                </div>
+                <div class="company">
+                    <h4>
+                        Company
+                    </h4>
+                    <ol>
+                        <li>
+                            About us
+                        </li>
+                        <li>
+                            Clients
+                        </li>
+                        <li>
+                            Resources
+                        </li>
+                        <li>
+                            Blog
+                        </li>
+                    </ol>
+                </div>
+                <div class="support">
+                    <h4>
+                        Support
+                    </h4>
+                    <ol>
+                        <li>
+                            Help
+                        </li>
+                        <li>
+                            Tutorials
+                        </li>
+                        <li>
+                            API
+                        </li>
+                        <li>
+                            Contact
+                        </li>
+                    </ol>
+                </div>
             </section>
         </main>
         <footer>
