--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5ca5c1dd0e.js" crossorigin="anonymous"></script>
         <title>
             Trackgenix SA
         </title>
@@ -19,6 +21,7 @@
         <nav class="sidebar">
             <div class="inputButtons">
                 <input type="text" placeholder="Search">
+                <i id="glass" class="fa-solid fa-magnifying-glass"></i>
                 <div class="buttons">
                     <button>
                         Log In
@@ -53,19 +56,19 @@
                 </span>
                 <div class="contact-info">
                     <div class="icon-link">
-                        <img src="assets/icons/envelope-solid.svg" alt="mail" height="15px" width="15px">
+                        <i class="fa-regular fa-envelope"></i>
                         <span>
                             mailinfo@trackgenix.com
                         </span>
                     </div>
                     <div class="icon-link">
-                        <img src="assets/icons/phone-solid.svg" alt="phone" height="15px" width="15px">
+                        <i class="fa-solid fa-phone"></i>
                         <span>
                             123-456789
                         </span>
                     </div>
                     <div class="icon-link">
-                        <img src="assets/icons/house-solid.svg" alt="adress" height="15px" width="15px">
+                        <i class="fa-solid fa-house"></i>
                         <span>
                             123 fake road #2000, Rosario, Argentina
                         </span>
@@ -89,31 +92,22 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
                             pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
                             voluptates ratione. Modi, aut nobis?
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
-                            pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
-                            voluptates ratione. Modi, aut nobis?
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
-                            pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
-                            voluptates ratione. Modi, aut nobis?
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
                             pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
                             voluptates ratione. Modi, aut nobis?
                         </p>
                     </div>
-                    <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="685" height="418">
+                    <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="514" height="313">
                 </div>
                 <div class="article-2">
-                    <img src="assets/img/office-1.jpg" alt="Work team reunion" id="img-2" width="580" height="288">
+                    <img src="assets/img/office-1.jpg" alt="Work team reunion" id="img-2" width="435" height="216">
                     <div class="article-2-body">
                         <h2>
                             Our History
                         </h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime
-                            dolores omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum
-                            reiciendis temporibus numquam. Alias, deleniti!
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime
                             dolores omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum
                             reiciendis temporibus numquam. Alias, deleniti!
@@ -157,54 +151,70 @@
                 <h2>
                     Why Trackgenix?
                 </h2>
-                <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Work team reunion">
-                <h3>
-                    Subheader
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                    necessitatibus reiciendis nesciunt numquam.
-                </p>
-                <button>
-                    Learn More
-                </button>
-                <h3>
-                    Subheader
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                    necessitatibus reiciendis nesciunt numquam. 
-                </p>
-                <button>
-                    Learn More
-                </button>
-                <img src="assets/img/headway-5QgIuuBxKwM-unsplash.jpg" alt="meeting">
-                <img src="assets/img/israel-andrade-YI_9SivVt_s-unsplash.jpg" alt="Our office working area">
-                <h3>
-                    Subheader
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                    necessitatibus reiciendis nesciunt numquam.
-                </p>
-                <button>
-                    Learn More
-                </button>
-                <h3>
-                    Subheader
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                    nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                    necessitatibus reiciendis nesciunt numquam. 
-                </p>
-                <button>
-                    Learn More
-                </button>
-                <img src="assets/img/thisisengineering-raeng-64YrPKiguAE-unsplash.jpg" alt="Our software in display">
+                <div class="article-03">
+                    <img src="assets/img/office-5.jpeg" alt="Work team reunion">
+                    <div class="article-03-body">
+                        <h3>
+                            Subheader
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                            necessitatibus reiciendis nesciunt numquam.
+                        </p>
+                        <button>
+                            Learn more
+                        </button>
+                    </div>
+                </div>
+                <div class="article-04">
+                    <div class="article-04-body">
+                        <h3>
+                            Subheader
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                            necessitatibus reiciendis nesciunt numquam. 
+                        </p>
+                        <button>
+                            Learn more
+                        </button>
+                    </div>
+                    <img src="assets/img/office-6.jpeg" alt="meeting">
+                </div>
+                <div class="article-05">
+                    <img src="assets/img/office-3.jpeg" alt="Our office working area">
+                    <div class="article-05-body">
+                        <h3>
+                            Subheader
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                            necessitatibus reiciendis nesciunt numquam.
+                        </p>
+                        <button>
+                            Learn more
+                        </button>
+                    </div>
+                </div>
+                <div class="article-06">
+                    <div class="article-06-body">
+                        <h3>
+                            Subheader
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
+                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
+                            necessitatibus reiciendis nesciunt numquam. 
+                        </p>
+                        <button>
+                            Learn more
+                        </button>
+                    </div>
+                    <img src="assets/img/office-4.jpeg" alt="Our software in display">
+                </div>
             </section>
             <section id="contact-us" class="contact-us">
                 <h2>
@@ -238,10 +248,10 @@
                     </select>
                     <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
                 </form>
-                <button>
-                    Send message
+                <button id="button-3">
+                    Send Message
                 </button>
-                <button>
+                <button id="button-4">
                     Reset
                 </button>
             </section>
