BaSP-2022: reviewed final changes

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <nav class="sidebar">
-            <div class="inputButtons">
+            <div class="input-buttons">
                 <input type="text" placeholder="Search">
                 <i id="glass" class="fa-solid fa-magnifying-glass"></i>
                 <div class="buttons">
@@ -131,19 +131,19 @@
                 </p>
                 <ul>
                     <li>
-                        <strong>Item 1:</strong> lorem ipsum is simply dummy text of the printin
+                        <span>Item 1:</span> lorem ipsum is simply dummy text of the printin
                     </li>
                     <li>
-                        <strong>Item 2:</strong> lorem ipsum is simply dummy text of the printin
+                        <span>Item 2:</span> lorem ipsum is simply dummy text of the printin
                     </li>
                     <li>
-                        <strong>Item 3:</strong> lorem ipsum is simply dummy text of the printin
+                        <span>Item 3:</span> lorem ipsum is simply dummy text of the printin
                     </li>
                     <li>
-                        <strong>Item 4:</strong> lorem ipsum is simply dummy text of the printin
+                        <span>Item 4:</span> lorem ipsum is simply dummy text of the printin
                     </li>
                     <li>
-                        <strong>Item 5:</strong> lorem ipsum is simply dummy text of the printin
+                        <span>Item 5:</span> lorem ipsum is simply dummy text of the printin
                     </li>
                 </ul>
             </section>
